2008-04-15  kitone  <kitone@gna.org>

	* src/Style.cc:
	Fix segfault at the opening of a ASS/SSA file create by subtitleeditor.
	Because the style doesn't save the value "encoding".

	* src/Makefile.am:
	* src/unittest/adobe.encore.dvd.ntsc.format:
	* src/unittest/adobe.encore.dvd.pal.format:
	* src/unittest/mpsub.format:
	Adding files for unit test.

2008-04-08  kitone  <kitone@gna.org>

	* src/actions/WaveformRendererCairo.cc:
	* src/actions/WaveformRendererGL.cc:
	Fix: display only if the area width is superior to 20 and the height to 10.

2008-04-04  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererCairo.cc:
	* src/actions/WaveformRendererGL.cc:
	Fix waveform/scrollbar configure event.
	Fix debug waveform.

2008-04-03  kitone  <kitone@gna.org>

	* src/gui/DialogFileChooser.cc:
	Add audio filter.

2008-03-25  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	Small fix, init and redisplay after open_wf.

2008-03-22  kitone  <kitone@gna.org>

	* src/actions/WaveformRendererGL.cc:
	Fixed when the waveform has changed, the display list need to be update.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Add check config and load config.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Connected to the configuration.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	Cleanup.

	* src/actions/WaveformRendererCairo.cc:
	Fix segfault when the renderer doesn't have a waveform.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	Add cairo renderer.

2008-03-19  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererGL.cc: