@@ -48,7 +48,7 @@ protected:
 	void callback_spin_value_changed(Gtk::SpinButton *w, const Glib::ustring &key);
 	void callback_color_button(Gtk::ColorButton* w, const Glib::ustring &key);
 	void callback_radio_toggled(Gtk::RadioButton* w, const Glib::ustring &key);
-	void callback_alignment_changed(Gtk::RadioButton* w, unsigned int w);
+	void callback_alignment_changed(Gtk::RadioButton* w, unsigned int num);
 	void callback_style_selection_changed();
 protected:
 	Document* m_current_document;
